--- a/CSS/style.css
+++ b/CSS/style.css
@@ -57,13 +57,13 @@ p {
 
 .middle-container {
   background-color: #fcf8f3;
-  margin: 100px 0;
+
 }
 
 .bottom-container {
-  padding: 30px;
+  padding: 50px 0 20px;
   background-color: #66BFBF;
-  color: #11999E;
+
 }
 
 .pro {
@@ -85,6 +85,7 @@ p {
 
 .ProfilePic {
   border-radius: 50%;
+  padding: 50px;
 }
 
 .translator {
@@ -137,24 +138,55 @@ hr {
   margin: 100px auto;
 }
 
+a
+{
+
+color: #11999E;
+font-family: 'Montserrat', sans-serif;
+margin: 10px 20px;
+text-decoration: none;
+
+}
+
+a:hover
+
+{
+
+color: #EAF6F6;
+
+}
+
+
 .copyright {
   color: #EAF6F6;
+  font-size: 0.75rem;
+  padding: 20px 0;
 }
 
 .btn {
-  display: inline-block;
-  padding: 15px 25px;
-  font-size: 15px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
-  color: #fff;
-  background-color: #66BFBF;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
+	box-shadow: 0px 10px 14px -7px #66BFBF;
+	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+	background-color:#599bb3;
+	border-radius:8px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:13px 32px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #3d768a;
 }
+.btn:hover {
+	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+	background-color:#408c99;
+}
+.btn:active {
+	position:relative;
+	top:1px;
+}
+
 
 .intro {
   width: 50%;
